assets/css/styles.css
body, html {
  margin: 0;
  padding: 0;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  color: #fff;
  font-family: 'Kodchasan', sans-serif;
  overflow: hidden;
}

#static-bg {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  z-index: 1;
}

#dynamic-bubbles {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 2;
  margin: 0;
  padding: 0;
}

#blur-overlay{
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 3;
  margin: 0;
  padding: 0;
  backdrop-filter: blur(90px);
  background-color: rgba(0, 0, 0, 0.3);
}

.bubble {
  position: absolute;
  border-radius: 50%;
  transition: transform 6s ease-in-out, background-color 300ms ease-in-out;
}

.bg-ref {
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 33.333333%;
  z-index: 3;
  backdrop-filter: blur(90px);
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  position: relative;
  z-index: 4;
}

.logo {
  width: 16rem;
  height: 16rem;
  animation: pulse 2s infinite;
}

.title {
  font-size: 4rem;
  text-align: center;
  white-space: nowrap;
  margin-bottom: 0;
  margin-top: 1rem;
}

.slogan {
  text-align: center;
}

.button-container {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

.btn {
  margin: 1rem;
  padding: 1rem 2rem;
  border: none;
  cursor: pointer;
  border-radius: 1rem;
  border-bottom: 4px solid black;
}

.btn-lg {
  font-size: 1.25rem;
}

.variant-filled-tertiary {
  background-color: rgb(99, 102, 241);
  color: #fff;
}

.variant-filled-tertiary:hover {
  background-color: rgb(79, 82, 221);
}

@keyframes pulse {
  0%, 100% {
    opacity: 1;
  }
  50% {
    opacity: 0.5;
  }
}

